# slackbotpp

./: .gitignore  CMakeLists.txt  README.md  config.yml  config.yml.back
include/: https.h  jira.h  sdybot.h  singleton.h  slackbot.h  slackbotpp.h  slackmessages.h  websocket_client.h
src/: https.cpp  jira.cpp  sdybot.cpp  singleton.cpp  slackbot.cpp  slackbotpp.cpp  slackmessages.cpp  websocket_client.cpp
